fix: link dont wrapping

--- a/frontend/statistics/statistics.css
+++ b/frontend/statistics/statistics.css
@@ -6,6 +6,7 @@ p {
 
 section {
     text-align: center;
+    padding: 10px;
     margin-top: 20px;
     border: 1px solid #ccc;
 }
@@ -14,6 +15,7 @@ section a {
     color: #0000EE;
     margin-top: 20px;
     text-decoration: none;
+    word-wrap: break-word;
     transition: 0.2s;
 }
 
